@@ -65,20 +65,13 @@ flext_dsp::~FLEXT_CLASSDEF(flext_dsp)()
     fts_dsp_object_delete(thisHdr());
 #endif
 
-    if(invecs) delete[] invecs;
-    if(outvecs) delete[] outvecs;
-
-/*
 #if FLEXT_SYS == FLEXT_SYS_MAX
-    // switch off dsp as the dsp function might get called afterwards (?!)
+    // switch off dsp as the dsp function might get called afterwards (different thread)
     thisHdr()->z_disabled = true;
-    
+#endif
+
     if(invecs) delete[] invecs;
     if(outvecs) delete[] outvecs;
-#elif FLEXT_SYS == FLEXT_SYS_PD
-    dspon = false;
-#endif
-*/
 }
 
 #if FLEXT_SYS == FLEXT_SYS_JMAX
@@ -89,15 +82,7 @@ void flext_dsp::dspmeth(fts_word_t *w)
 t_int *flext_dsp::dspmeth(t_int *w) 
 { 
     flext_dsp *obj = (flext_dsp *)(size_t)w[1];
-/*
-#ifdef FLEXT_DEBUG
-    if(!obj->thisHdr()) {
-        // object is already deleted!
-        ERRINTERNAL();
-        return w+3;
-    }
-#endif
-*/
+
 #if FLEXT_SYS == FLEXT_SYS_MAX
     if(!obj->thisHdr()->z_disabled)
 #else
