@@ -51,12 +51,6 @@ public:
 	//! returns current block (aka vector) size
 	int Blocksize() const { return blksz; }
     
-	//! returns number of input channels
-	int ChannelsIn() const { return chnsin; }
-
-	//! returns number of output channels
-	int ChannelsOut() const { return chnsout; }
-
 	//! typedef describing a signal vector
 #if FLEXT_SYS == FLEXT_SYS_JMAX
 	typedef fts_symbol_t t_signalvec;
